# pylade

./: .gitignore  .travis.yml  LICENSE.md  README.md  cavnar_trenkle_impl.py  corpus_generator.py  detect.py  detector.py  evaluate.py  graph.html  line.html  plot_utils.py  pyproject.toml  results.txt  setup.py  tox.ini  train.py  twitter_corpus_reader.py  utils.py
.github/workflows/: ci_checks.yml
docs/: .buildinfo  Makefile  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pylade.console_scripts.args_parsers.html  pylade.console_scripts.html  pylade.corpus_readers.html  pylade.html  pylade.implementations.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/pylade/: allowed_classes.html  utils.html
docs/_sources/: index.rst.txt  modules.rst.txt  pylade.console_scripts.args_parsers.rst.txt  pylade.implementations.rst.txt
docs/source/: conf.py  index.md  index.rst  pylade.console_scripts.args_parsers.rst  pylade.console_scripts.rst  pylade.corpus_readers.rst  pylade.implementations.rst  pylade.rst
docs_src/: Makefile
docs_src/source/: conf.py  index.rst  pylade.corpus_readers.rst  pylade.rst
language_detection/: allowed_classes.py  cavnar_trenkle_impl.py  detect.py  evaluate.py  train.py  utils.py
language_detection/console_scripts/: __init__.py  detect.py  evaluate.py  train.py
language_detection/console_scripts/args_parsers/: detect_script_args_parser.py  evaluate_script_args_parser.py  train_script_args_parser.py
language_detection/corpus_readers/: __init__.py  corpus_reader.py  csv_corpus_reader.py  twitter_corpus_reader.py
language_detection/data/: model.json
language_detection/implementations/: __init__.py  cavnar_trenkle_impl.py  implementation.py
pylade/: allowed_classes.py  utils.py
pylade/console_scripts/: __init__.py  detect.py  evaluate.py  train.py
pylade/console_scripts/args_parsers/: detect_script_args_parser.py  evaluate_script_args_parser.py  (+1 more)
pylade/corpus_readers/: __init__.py  corpus_reader.py  csv_corpus_reader.py  twitter_corpus_reader.py
pylade/implementations/: __init__.py  cavnar_trenkle_impl.py  implementation.py
tests/: test_args_parsers.py  test_console_scripts.py  test_twitter_corpus_reader.py  test_utils.py
tests/implementations/: test_cavnar_trenkle_impl.py
tests/test_files/: training_set_example.csv
(+11 files in other folders)
