[tool.poetry]
name = "pylade"
version = "1.0.0"
description = "PyLaDe - Language Detection tool written in Python."
authors = ["Pierpaolo Pantone <24alsecondo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/fievelk/pylade"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9 <=3.12"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
tox = "^4.4.7"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.4"
# Override requests (subdependency of sphinx) to fix vulnerability issue:
# See: https://github.com/advisories/GHSA-j8r2-6x86-q33q
# See: https://nvd.nist.gov/vuln/detail/CVE-2023-32681
requests = "^2.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pylade = "pylade.console_scripts.detect:main"
pylade_train = "pylade.console_scripts.train:main"
pylade_eval = "pylade.console_scripts.evaluate:main"
